Add SBT options panel controlling console arguments